# a2a-experiments

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
data/: secops-agent-jordan-001_session.db
docs/: a2a-learning-lab-walkthrough.md  ai-agent-integration.md
scripts/: health-check.sh  setup-dev.sh
src/: __init__.py  main.py
src/a2a_agents/containerops/: __init__.py  containerops_agent.py
src/a2a_agents/coordinator/: __init__.py  chat_coordinator.py
src/a2a_agents/dataops/: __init__.py  data_query.py
src/a2a_agents/devops/: infrastructure_monitor.py
src/a2a_agents/docker/: docker_monitor.py
src/a2a_agents/finops/: cost_monitor.py
src/a2a_agents/gitops/: __init__.py  gitops_agent.py
src/a2a_agents/secops/: security_monitor.py
src/agents/coordinator/: __init__.py
src/agents/devops/: infrastructure_monitor.py
src/agents/finops/: cost_monitor.py
src/agents/memory/: __init__.py  session.py
src/agents/secops/: security_monitor.py
src/core/: agent.py  agent_registry.py  config.py  host_agent.py
src/utils/: a2a_mock.py  redis_client.py
src/web/: app.py  utils.py
src/web/routes/: api.py  chat.py
src/web/static/: dashboard.css  dashboard.js
src/web/templates/: dashboard.html
src/web/templates/components/: agent_error_message.html  agent_message.html  agents_grid.html  auth_prompt.html  chat_history.html  chat_messages.html  cost_results.html  error.html  optimization_results.html  overview_results.html  security_results.html  (+3 more)
