[project]
name = "a2a-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk[http-server]>=0.3.3",
    "aiosqlite>=0.21.0",
    "asyncio-mqtt>=0.16.2",
    "docker>=7.1.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markdown>=3.8.2",
    "openai>=1.102.0",
    "openai-agents>=0.2.9",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
